# lathe

./: .dockerignore  .gitconfig  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  lathe.code-workspace  launch.json  main.py  options.json  pyproject.toml  requirements-13mar2025.txt  requirements-18mar2025.txt  requirements.txt  ruff.toml
.claude/agents/: software-architect.md
.docker/: .dockerignore  Dockerfile  README.md  app-dev.dockerfile  app.dockerfile  dev-compose.yml  docker-compose-dev.yml
.github/workflows/: claude-code-review.yml
.stubs/: main.pyi
.stubs/engine/: tectonics.pyi  util.pyi  viz.pyi  world.pyi
.stubs/lathe/: lathe.pyi  main.pyi  terrain.pyi  viz.pyi  world.pyi
.stubs/numba/: __init__.pyi
.stubs/scipy/: __init__.pyi
data/worlds/: world_ecfafd7b-007b-429a-b8ff-b505c00ab09a.h5
engine/: util.py  viz.py  world.py
lathe/: lathe.py  planetnames.json  tectonics.py  terrain.py  util.py  viz.py
outputs/: Elrania-2025-02-23-01-05-06.json  Gezugantu-2025-02-25-21-55-35.json  Mora 5LD-2025-02-25-22-12-50.json  Nogonides-2025-02-25-21-57-23.json  Phihephus-2025-02-25-22-10-41.json  Sillon HNB-2025-02-25-22-21-13.json  Sillon HNB-2025-02-25-22-39-58.json
src/: FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  PLUGIN_DEVELOPMENT_GUIDE.md  QUICKSTART.md  README.md  README_VIEWER.md  TECTONICS_V2_SUMMARY.md  TESTING_COMPLETE.md  TEST_REPORT.md  launch_viewer.sh  main.py  omp  osi.py  pyproject.toml  pytest.ini  tectonics.py  terrain.py  test.py  test_all_visualization.py  test_qt_display.py  test_viewer.py
src/app/: .gitignore  .pyproject.toml.swp  lathe.py  mylogger.py  osi.py  pyproject.toml  tectonics.py  test.py  util.py  viz.py
src/data/worlds/: world_62716da6-ba51-43b7-8e67-f3cc6fa53062.h5
src/examples/: basic_generation.py  complete_workflow.py  render_world_offscreen.py  storage_example.py  test_tectonics.py
src/lathe/: README.md  __main__.py  lathe.py  main.py  main_gui.py  terrain.py  test.py  util.py  viz.py  world.py
src/lathe/analysis/: poi_detector.py
src/lathe/api/: server.py
src/lathe/core/: engine.py  events.py
src/lathe/engine/: qtviz.py  terrain.py  util.py  viz.py  world.py
src/lathe/gui/: main.py
src/lathe/models/: world.py
src/lathe/plugins/: base.py
src/lathe/plugins/tectonics/: simulator.py
src/lathe/plugins/terrain/: generator.py
src/lathe/storage/: mesh_store.py  metadata_store.py
src/lathe/viz/: __main__.py  desktop.py
src/notebooks/: Book 1 - Base Terrain Generation.ipynb  terrain_gen.ipynb
src/tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py
typings/numpy/: __config__.pyi  __init__.pyi  _array_api_info.pyi  _configtool.pyi  _distributor_init.pyi  _expired_attrs_2_0.pyi  _globals.pyi  conftest.pyi  ctypeslib.pyi  dtypes.pyi  exceptions.pyi  matlib.pyi  version.pyi
typings/numpy/_core/: _asarray.pyi  _internal.pyi  _type_aliases.pyi  arrayprint.pyi  defchararray.pyi  einsumfunc.pyi  fromnumeric.pyi  function_base.pyi  multiarray.pyi  numeric.pyi  numerictypes.pyi  records.pyi  shape_base.pyi  strings.pyi
typings/numpy/_typing/: __init__.pyi  _array_like.pyi  _callable.pyi  _char_codes.pyi  _dtype_like.pyi  _extended_precision.pyi  _nbit.pyi  _nested_sequence.pyi  _scalars.pyi  _shape.pyi  _ufunc.pyi
typings/numpy/_utils/: __init__.pyi  _convertions.pyi  _inspect.pyi
typings/numpy/char/: __init__.pyi
typings/numpy/compat/: __init__.pyi  py3k.pyi
typings/numpy/f2py/: __init__.pyi
typings/numpy/fft/: __init__.pyi  _helper.pyi  _pocketfft.pyi
typings/numpy/linalg/: __init__.pyi  _linalg.pyi
typings/numpy/ma/: __init__.pyi  core.pyi  extras.pyi  mrecords.pyi
typings/numpy/matrixlib/: __init__.pyi
typings/numpy/polynomial/: __init__.pyi  _polybase.pyi  _polytypes.pyi  chebyshev.pyi  hermite.pyi  hermite_e.pyi  laguerre.pyi  legendre.pyi  polynomial.pyi  polyutils.pyi
typings/numpy/random/: __init__.pyi  _generator.pyi  _mt19937.pyi  _philox.pyi  _sfc64.pyi  bit_generator.pyi  mtrand.pyi
typings/numpy/rec/: __init__.pyi
typings/numpy/strings/: __init__.pyi
typings/numpy/testing/: __init__.pyi
typings/numpy/typing/: __init__.pyi
typings/opensimplex/: __init__.pyi  api.pyi  constants.pyi  internals.pyi
typings/pyvista/: __init__.pyi  _plot.pyi  _version.pyi  conftest.pyi  errors.pyi  report.pyi
typings/pyvista/core/: __init__.pyi  _vtk_core.pyi  cell.pyi  celltype.pyi  composite.pyi  dataobject.pyi  dataset.pyi  datasetattributes.pyi  errors.pyi  grid.pyi  objects.pyi  partitioned.pyi  pointset.pyi  pyvista_ndarray.pyi  wrappers.pyi
typings/pyvista/demos/: __init__.pyi  demos.pyi  logo.pyi
typings/pyvista/examples/: __init__.pyi  _dataset_loader.pyi  cells.pyi  download_3ds.pyi  downloads.pyi  examples.pyi  gltf.pyi  planets.pyi  vrml.pyi
typings/pyvista/ext/: __init__.pyi
typings/pyvista/jupyter/: __init__.pyi  notebook.pyi
typings/pyvista/plotting/: __init__.pyi  _plotting.pyi  _property.pyi  _typing.pyi  _vtk.pyi  _vtk_gl.pyi  actor.pyi  actor_properties.pyi  affine_widget.pyi  axes.pyi  axes_actor.pyi  axes_assembly.pyi  background_renderer.pyi  camera.pyi  charts.pyi  colors.pyi  composite_mapper.pyi  cube_axes_actor.pyi  errors.pyi  helpers.pyi  lights.pyi  lookup_table.pyi  mapper.pyi  opts.pyi  picking.pyi  plotter.pyi  prop3d.pyi  render_passes.pyi  render_window_interactor.pyi  renderer.pyi  renderers.pyi  scalar_bars.pyi  text.pyi  texture.pyi  themes.pyi  tools.pyi  volume.pyi  volume_property.pyi  widgets.pyi
typings/pyvista/trame/: __init__.pyi  jupyter.pyi  views.pyi
typings/pyvista/utilities/: __init__.pyi
typings/scipy/: __config__.pyi  __init__.pyi  _distributor_init.pyi  conftest.pyi  version.pyi
typings/scipy/_lib/: _array_api.pyi  _ccallback.pyi  _disjoint_set.pyi  _docscrape.pyi  _elementwise_iterative_method.pyi  _pep440.pyi  _testutils.pyi  _threadsafety.pyi  _util.pyi  decorator.pyi  deprecation.pyi  doccer.pyi
typings/scipy/cluster/: __init__.pyi  hierarchy.pyi  vq.pyi
typings/scipy/constants/: __init__.pyi  _codata.pyi  _constants.pyi  codata.pyi  constants.pyi
typings/scipy/io/: _idl.pyi  (+9 more)
(+490 files in other folders)
