[project]
name = "lathe-of-heaven"
version = "0.1.0"
description = ""
authors = [
    { name = "NorthernScott", email = "stonejester@protonmail.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "outputs",
    ".out",
]
# Max line length same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "D100",   # ignore undocumented-public-module
    "S311",   # ignore suspicious-non-cryptographic-random-usage as I am not using cryptography.
    "FIX002", # ignore line-contains-todo. I use TODO as a task item.
    "FIX004", # ignore line-contains-hack. I use HACK as a task item.
    "TD003",  # ignore missing-todo-link as I am not using an issue tracker at the moment.
]

[tool.ruff.lint.pylint]
max-args = 12

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 120

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
mypy_path = ".; ./engine; ./gui; ./.stubs"
files = ["**/*.py", "**/*.pyi"]
exclude = [
    "build",
    "dist",
    "site-packages",
    ".tox",
    ".nox",
    ".eggs",
    ".mypy_cache",
    ".pytest_cache",
    ".hypothesis",
    ".git",
    ".github",
    ".vscode",
    ".mypy",
    "/outputs",
]
namespace_packages = true
follow_untyped_imports = true

[tool.mypy-numba]
disable_error_code = ["attr-defined"]
