[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lathe"
version = "0.1.0"
description = ""
authors = [
    { name = "Fjordstone", email = "stonejester@protonmail.com" },
]
dependencies = [
    "cmocean",
    "matplotlib",
    "numpy",
    "opensimplex",
    "pyside6",
    "pyvista",
    "pyvistaqt",
    "qtpy",
    "rich",
    "scipy",
    "typer",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "setuptools",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "outputs",
    ".out",
    "typings",
]

# Max line length same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "D100",   # ignore undocumented-public-module
    "S311",   # ignore suspicious-non-cryptographic-random-usage as I am not using cryptography.
    "FIX002", # ignore line-contains-todo. I use TODO as a task item.
    "FIX004", # ignore line-contains-hack. I use HACK as a task item.
    "TD003",  # ignore missing-todo-link as I am not using an issue tracker at the moment.
]

[tool.ruff.lint.pylint]
max-args = 12

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 120

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pyright]
include = ["src", "src/lathe"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/lathe/typings",
]
ignore = [
    "src/old",
    "src/lathe/typings",
]
stubPath = "src/lathe/typings"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13"
pythonPlatform = "Windows"

executionEnvironments = [
    { root = "src/lathe" },
]

[tool.pyright.defineConstant]
DEBUG = true
PYQT5 = false
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = true
