[project]
name = "lathe"
version = "0.2.0"
description = "Procedural world generation tool."
readme = "README.md"
authors = [
    { name = "Scott Drennan", email = "s.drennan@gmail.com" }
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "h5py>=3.15.1",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "opensimplex>=0.4.5.1",
    "pyside6>=6.10.0",
    "pyvista>=0.46.4",
    "pyvistaqt>=0.11.3",
    "scipy>=1.16.3",
]

[project.scripts]
lathe = "lathe:main"

[project.optional-dependencies]
typing = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.3.251201",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "scipy-stubs>=1.16.3.3",
    "types-colorama>=0.4.15.20250801",
    "types-decorator>=5.2.0.20251101",
    "types-defusedxml>=0.7.0.20250822",
    "types-networkx>=3.6.1.20251212",
    "types-pexpect>=4.9.0.20250916",
    "types-psutil>=7.1.3.20251211",
    "types-pygments>=2.19.0.20251121",
    "types-tqdm>=4.67.0.20250809",
]
typing = []

