[tool.poetry]
name = "lathe"
version = "0.1.0"
description = "Procedurally generated worlds."
authors = ["NortherScott <stonejester@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
typer = "^0.12.3"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = []
